force-app/main/default/objects/CTM_Log__c/CTM_Log__c.object-meta.xml
<CustomObject>
    <label>CTM Log</label>
    <nameField>
        <displayFormat>CTML - {0000}</displayFormat>
        <label>CTM Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTM Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>