force-app/main/default/objects/CTM_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account</label>
    <length>40</length>
    <type>Text</type>
</CustomField>