force-app/main/default/objects/CTM_Log__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deleted By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>