force-app/main/default/objects/CTM_Log__c/fields/Deleted_User__c.field-meta.xml
<CustomField>
    <fullName>Deleted_User__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deleted User</label>
    <length>40</length>
    <type>Text</type>
</CustomField>