force-app/main/default/objects/CTM_Log__c/fields/Deletion_Time__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deletion Time</label>
    <type>DateTime</type>
</CustomField>